k8s/applications/dev/tlsrpt/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: tlsrpt
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: tlsrpt
  ports:
    - {name: http, protocol: TCP, port: 80, targetPort: http}
